Fix window controls overlaping game settings/menu buttons

--- a/src/frontend/screens/Game/GamePage/index.css
+++ b/src/frontend/screens/Game/GamePage/index.css
@@ -66,7 +66,6 @@
     justify-content: space-between;
     gap: auto;
     z-index: 1;
-    width: 100%;
 
     & > * {
       filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.25));
@@ -537,6 +536,10 @@
 .App.isRTL .gameConfigContainer .game-actions .gameTools {
   left: 0;
   right: unset;
+}
+
+.App.frameless:not(.fullscreen) .topRowWrapper {
+  margin-right: var(--overlay-controls-width);
 }
 
 .gameConfigContainer {
